<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#27af23"
        android:layout_weight="0.00">

        <ImageView
            android:src="@drawable/back"
            android:id="@+id/prepare_back"
            android:layout_gravity="left|center"
            android:layout_weight="0.1"
            android:layout_width="60dp"
            android:layout_height="60dp" />


        <TextView
            android:id="@+id/prepare_exam_textview"
            android:layout_width="153dp"
            android:layout_height="match_parent"
            android:text="准备考核"
            android:textSize="24sp"
            android:gravity="center"
            android:layout_weight="0.8"
            tools:ignore="DuplicateIds" />

        <ImageView
            android:src="@drawable/logo"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:id="@+id/logo_drawable"
            android:layout_gravity="left|center"
            android:layout_weight="0.02"
            android:layout_marginLeft="20dp" />

    </LinearLayout>
	<LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" 
        android:divider="@drawable/divider_shape"
        android:showDividers="middle">

        <TextView
            android:id="@+id/prepare_classname_textview"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="普九班"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/prepare_name_textview"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="张三"
            android:textSize="24sp" />
    </LinearLayout>

    <Spinner
        android:id="@+id/prepare_map_spinner"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:entries="@array/map_name"
        android:gravity="center"
        android:prompt="@string/spinner_prompt"
        android:textSize="24sp" />

    <Spinner
        android:id="@+id/prepare_region_spinner"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:entries="@array/region_name"
        android:gravity="center"
        android:prompt="@string/spinner_prompt"
        android:textSize="24sp" />

    <Spinner
        android:id="@+id/prepare_teacher_spinner"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:entries="@array/teacher_name"
        android:gravity="center"
        android:prompt="@string/spinner_prompt"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/prepare_routenumber_edittext"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="路线号-13"
        android:textSize="24sp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp">

        <Button
            android:id="@+id/prepare_start_button"
            style="@style/AppBaseTheme"
            android:layout_height="50dp"
            android:background="#27af23"
            android:gravity="center"
            android:text="@string/start_btn"
            android:textSize="24sp"
            android:layout_weight="1"
            android:layout_width="wrap_content">

        </Button>

        <Button
            android:id="@+id/prepare_get_button"
            style="@style/AppBaseTheme"
            android:layout_height="50dp"
            android:background="#27af23"
            android:gravity="center"
            android:text="@string/get_btn"
            android:textSize="24sp"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_marginLeft="10dp">

        </Button>
    </LinearLayout>

</LinearLayout>